# essence-demo

./: .env.template  README.md  pyproject.toml  requirements.md  setup.cfg
essence_demo/: app.py  auth.py  config.py  core.py  extensions.py  main.py
essence_demo/api/: __init__.py
essence_demo/auth/: auth.py
essence_demo/dashboard/: dashboard.py
essence_demo/graphs/: __init__.py
essence_demo/templates/: dashboard.html  index.html  layout.html
essence_demo/user/: models.py
tests/: test_app.py  test_essence_demo.py
